# sphinxad-rs

./: .gitignore  Cargo.toml  README.md
examples/: record and write to file.rs
examples/record_and_recognize_speech/: Cargo.toml
examples/record_and_recognize_speech/english/: grammar.jsgf
examples/record_and_recognize_speech/russian/: grammar.jsgf  vocabulary.dict
examples/record_and_recognize_speech/src/: main.rs
examples/record_and_write_to_file/: Cargo.toml
examples/record_and_write_to_file/src/: main.rs
src/: audio_device.rs  error.rs  lib.rs
